A lot of work done. The scramble can now be displayed!
FIXME:
-Fix the settings
-Save scrambles
-Fix reset session btn
-Fix loading

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,14 @@
         <div class="Mean3">Mean of 3: 16.37</div>
         <div class="Avg5">Average of 5: 17.69</div>
         <div class="Avg12">Average of 12: 19.42</div>
+<!--        <button class="showTimes">Show Times</button>-->
     </div>
+<!--    <div class="times">-->
+<!--        <div class="solve">-->
+<!--            <div class="num">1</div>-->
+<!--            <div class="solveTime">19.38</div>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="timer">
         <div class="time">0.000</div>
     </div>
